Chapter 1 fix to spacing

--- a/interactives/fullerton-nimby/css/styles.sass
+++ b/interactives/fullerton-nimby/css/styles.sass
@@ -138,8 +138,9 @@ p
   @media(max-width: 650px)
     width: 95%
     padding: 10px 10px 10px 0
-  &:first-child
-    margin-top: -35px
+
+#chapter-1
+  margin-top: -35px
 
 
 .chapter-num
